[package]
name = "ampsim-launcher"
version = "0.1.2"
edition = "2021"

[dependencies]
stable-eyre = "0.2.2"
mslnk = "0.1.7"
clap = { git = "https://github.com/clap-rs/clap.git", tag = "v3.0.0-rc.9"}
path-absolutize = "3.0.5"

[dependencies.windows]
version = "0.29.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
