[package]
name = "ampsim-launcher"
version = "0.2.1"
edition = "2021"

[dependencies]
stable-eyre = "0.2.2"
mslnk = "0.1.7"
clap = "3.0.1"
path-absolutize = "3.0.5"
sysinfo = "0.22.4"
lazy_static = "1.4.0"
Inflector = "0.11.4"
quoted-string = "0.6.1"
camino = "1.0.5"

[dependencies.windows]
version = "0.29.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
