[package]
name = "ampsim-launcher"
version = "0.2.2"
edition = "2024"

[dependencies]
stable-eyre = "0.2.2"
mslnk = "0.1.8"
clap = "4.5.60"
path-absolutize = "3.1.1"
sysinfo = "0.38.3"
cruet = "0.15.0"
quoted-string = "0.6.1"
camino = "1.2.2"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
